<resources>
    <string name="app_name">ListaCompras</string>
    <string name="add_resgistro">Añdir Resgistro</string>
    <string name="lista_compras">Lista Compras</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="planificar_compras">Planificar compras</string>
    <string name="registro_compras">registro Compras</string>
    <string name="configuraci_n">Configuración</string>
    <string name="hint_cantidad">Cantidad: </string>
    <string name="hint_nombre" >Nombre: </string>
    <string name="hint_categoria" >Categoria: </string>
    <string name="btn_guardar" >Guardar</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="iniciar_sesi_n" >Inicio Sesión</string>
    <string name="usuario" >Usuario</string>
    <string name="contrase_a" >Contraseña</string>
    <string name="iniciar" >Ingresar</string>
    <string name="not_yet_registered_signup_now" >¡Registrate!</string>
    <string name="producto" ></string>
    <string name="txtbuscar">Buscar</string>
</resources>